<resources>
    <string name="app_name">Petdop</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="upload">Upload</string>
    <string name="bookmark">Bookmark</string>
    <string name="account">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="near_you">Terdekat</string>
    <string name="see_all">Lihat semua</string>
    <string name="popular">Populer</string>
    <string name="news">Berita</string>
    <string name="notification">Notifikasi Pengajuan</string>
    <string name="message">Pesan</string>
    <string name="image_pet">Image Pet</string>
    <string name="image_news">Image News</string>
    <string name="description">Deskripsi</string>
    <string name="age">Usia</string>
    <string name="pet_status">Status</string>
    <string name="address">Alamat</string>
    <string name="reason">Alasan</string>
    <string name="contact">Hubungi</string>
    <string name="adoption">Adopsi</string>
    <string name="weight">Berat</string>
    <string name="vaccinated">Tervaksin</string>
    <string name="not_vaccinated">Belum di vaksin</string>
    <string name="author">Pemilik</string>
    <string name="search">Cari....</string>
    <string name="adoption_form">Form Pengajuan Adopsi</string>
    <string name="home_specification">Spesifikasi Rumah</string>
    <string name="ajukan">Ajukan</string>
    <string name="write_pet_name">Nama Hewan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="male">Jantan</string>
    <string name="female">Betina</string>
    <string name="pet_category">Jenis Hewan</string>
    <string name="dog">Anjing</string>
    <string name="cat">Kucing</string>
    <string name="tervaksin">Tervaksin</string>
    <string name="belum_tervaksin">Belum Tervaksin</string>
    <string name="pengajuan_dikirim">Pengajuan Dikirim</string>
    <string name="pengajuan_diterima">Pengajuan Diterima</string>
    <string name="approve">Terima Adopsi</string>
    <string name="reject">Tolak Adopsi</string>
    <string name="cancel">Batalkan Adopsi</string>
    <string name="photos">Foto Hewan</string>
    <string name="not_available">Tidak Tersedia</string>
    <string name="detail_news">Detail Artikel</string>
    <string name="edit">Ubah Post</string>
    <string name="delete">Hapus Post</string>
    <string name="newest">Terbaru</string>
</resources>