<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_explore"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/explore" />
    <item
        android:id="@+id/menu_upload"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/upload" />
    <item
        android:id="@+id/menu_bookmark"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/bookmark" />
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />
</menu>