<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_pet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_pet"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Guin" />

            <TextView
                android:id="@+id/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorTextSecondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/text_gender"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                tools:text="Anjing" />

            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorTextSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/text_category"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                tools:text="Betina" />

            <TextView
                android:id="@+id/text_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorTextSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/text_category"
                tools:text="Yogyakarta" />

            <Button
                android:id="@+id/btn_adoption"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_rounded_button"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/adoption"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                app:layout_constraintEnd_toStartOf="@+id/image_message"
                app:layout_constraintStart_toEndOf="@+id/cardView2" />

            <ImageView
                android:id="@+id/image_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/message"
                app:layout_constraintBottom_toBottomOf="@+id/btn_adoption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_adoption"
                app:srcCompat="@drawable/ic_baseline_mail_32" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="#e0e0e0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>